@@ -1,3 +1,7 @@
+2011-01-10  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gdroplist.R: fix for width if no intial items
+
 2011-01-07  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/aaaGenerics.R: fixed addHandlerRightClick. Thanks Marie V
